<resources>
    <string name="app_name">MyPolice</string>
    <string name="calendar">Calendar</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="scan">Scan</string>
    <string name="notes">Notes</string>
    <string name="camera">Camera</string>
    <string name="sos">SOS</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="back">BACK</string>
    <string name="date_of_coming">Enter the date of coming to the country:</string>
    <string name="date_of_departure">Enter the date of departure from the country:</string>
    <string name="dd_mm_yy">dd.mm.yy</string>
    <string name="ok">OK</string>
    <string name="enter_the_license_plate_of_car">Enter the license plate of car:</string>
    <string name="license_plate_hint">CG1234HJ</string>
    <string name="feature_textview">This app feature is under development</string>
</resources>