<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScanActivity">

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/enter_the_license_plate_of_car"
        android:textColor="#ff8426" />

    <EditText
        android:id="@+id/license_plate"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/license_plate_hint"
        android:textColor="#ffcba3"
        android:textColorHint="#b0b0b0" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#ff8426"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/textview_check"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />


</LinearLayout>